codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_failure codex_agent_failure_t;
typedef struct codex_agent_conversation_id codex_agent_conversation_id_t;
typedef struct codex_agent_elicitation_validation_issue codex_agent_elicitation_validation_issue_t;
typedef struct codex_agent_elicitation_validation codex_agent_elicitation_validation_t;
typedef struct codex_agent_pending_approval codex_agent_pending_approval_t;
typedef struct codex_agent_form_value codex_agent_form_value_t;
typedef struct codex_agent_elicitation codex_agent_elicitation_t;
typedef struct codex_agent_elicitation_response codex_agent_elicitation_response_t;
typedef struct codex_agent_pending_elicitation codex_agent_pending_elicitation_t;
typedef struct codex_agent_pending_interaction codex_agent_pending_interaction_t;
typedef struct codex_agent_interaction_state codex_agent_interaction_state_t;
typedef struct codex_agent_form_content codex_agent_form_content_t;
typedef struct codex_agent_pending_interaction_list codex_agent_pending_interaction_list_t;
typedef int32_t codex_agent_elicitation_validation_reason_t;
typedef int32_t codex_agent_pending_interaction_kind_t;
typedef int32_t codex_agent_elicitation_action_t;
typedef struct codex_agent_string_view {
    const uint8_t *data;
    size_t size;
} codex_agent_string_view_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_pending_approval_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *request_id,
    codex_agent_conversation_id_t *conversation_id,
    const codex_agent_string_view_t *title,
    const codex_agent_string_view_t *details,
    codex_agent_pending_approval_t **out_approval);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_pending_approval_destroy(
    codex_agent_context_t *context,
    codex_agent_pending_approval_t **approval);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_pending_approval_request_id_copy(
    codex_agent_context_t *context,
    codex_agent_pending_approval_t *approval,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_pending_approval_conversation_id(
    codex_agent_context_t *context,
    codex_agent_pending_approval_t *approval,
    codex_agent_conversation_id_t **out_conversation_id);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_validation_issue_destroy(
    codex_agent_context_t *context,
    codex_agent_elicitation_validation_issue_t **issue);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_validation_issue_field_name_copy(
    codex_agent_context_t *context,
    codex_agent_elicitation_validation_issue_t *issue,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_validation_issue_reason(
    codex_agent_context_t *context,
    codex_agent_elicitation_validation_issue_t *issue,
    codex_agent_elicitation_validation_reason_t *out_reason);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_validation_destroy(
    codex_agent_context_t *context,
    codex_agent_elicitation_validation_t **validation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_validation_issue_count(
    codex_agent_context_t *context,
    codex_agent_elicitation_validation_t *validation,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_validation_issue_at(
    codex_agent_context_t *context,
    codex_agent_elicitation_validation_t *validation,
    size_t index,
    codex_agent_elicitation_validation_issue_t **out_issue);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_response_create(
    codex_agent_context_t *context,
    codex_agent_elicitation_action_t action,
    const codex_agent_string_view_t *content_keys,
    codex_agent_form_value_t *const *content_values,
    size_t content_count,
    codex_agent_elicitation_response_t **out_response);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_elicitation_response_destroy(
    codex_agent_context_t *context,
    codex_agent_elicitation_response_t **response);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_elicitation_response_action(
    codex_agent_context_t *context,
    codex_agent_elicitation_response_t *response,
    codex_agent_elicitation_action_t *out_action);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_elicitation_response_content_count(
    codex_agent_context_t *context,
    codex_agent_elicitation_response_t *response,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_elicitation_response_content_value(
    codex_agent_context_t *context,
    codex_agent_elicitation_response_t *response,
    const codex_agent_string_view_t *key,
    codex_agent_form_value_t **out_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_elicitation_create(
    codex_agent_context_t *context,
    codex_agent_elicitation_t *elicitation,
    codex_agent_pending_elicitation_t **out_pending_elicitation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_elicitation_destroy(
    codex_agent_context_t *context,
    codex_agent_pending_elicitation_t **pending_elicitation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_elicitation_request_id_copy(
    codex_agent_context_t *context,
    codex_agent_pending_elicitation_t *pending_elicitation,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_elicitation_conversation_id(
    codex_agent_context_t *context,
    codex_agent_pending_elicitation_t *pending_elicitation,
    codex_agent_conversation_id_t **out_conversation_id);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_interaction_from_approval(
    codex_agent_context_t *context,
    codex_agent_pending_approval_t *approval,
    codex_agent_pending_interaction_t **out_interaction);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_interaction_from_elicitation(
    codex_agent_context_t *context,
    codex_agent_pending_elicitation_t *pending_elicitation,
    codex_agent_pending_interaction_t **out_interaction);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_interaction_destroy(
    codex_agent_context_t *context,
    codex_agent_pending_interaction_t **interaction);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_pending_interaction_kind(
    codex_agent_context_t *context,
    codex_agent_pending_interaction_t *interaction,
    codex_agent_pending_interaction_kind_t *out_kind);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_interaction_approval(
    codex_agent_context_t *context,
    codex_agent_pending_interaction_t *interaction,
    codex_agent_pending_approval_t **out_approval);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_pending_interaction_elicitation(
    codex_agent_context_t *context,
    codex_agent_pending_interaction_t *interaction,
    codex_agent_pending_elicitation_t **out_elicitation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_interaction_state_create(
    codex_agent_context_t *context,
    codex_agent_pending_interaction_t *const *pending,
    size_t pending_count,
    const codex_agent_string_view_t *resolving_request_ids,
    size_t resolving_request_id_count,
    int32_t has_failure,
    codex_agent_failure_t *failure,
    codex_agent_interaction_state_t **out_state);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_interaction_state_destroy(
    codex_agent_context_t *context,
    codex_agent_interaction_state_t **state);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_interaction_state_resolving_request_ids_contains(
    codex_agent_context_t *context,
    codex_agent_interaction_state_t *state,
    const codex_agent_string_view_t *request_id,
    int32_t *out_contains);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_interaction_state_is_resolving(
    codex_agent_context_t *context,
    codex_agent_interaction_state_t *state,
    codex_agent_pending_interaction_t *interaction,
    int32_t *out_is_resolving);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_validate(
    codex_agent_context_t *context,
    codex_agent_elicitation_t *elicitation,
    codex_agent_form_content_t *content,
    codex_agent_elicitation_validation_t **out_validation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_accept(
    codex_agent_context_t *context,
    codex_agent_elicitation_t *elicitation,
    codex_agent_form_content_t *content,
    codex_agent_elicitation_response_t **out_response);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_elicitation_accepts(
    codex_agent_context_t *context,
    codex_agent_elicitation_t *elicitation,
    codex_agent_elicitation_response_t *response,
    int32_t *out_accepts);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_elicitation_response_decline(
    codex_agent_context_t *context,
    codex_agent_elicitation_response_t **out_response);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_elicitation_response_cancel(
    codex_agent_context_t *context,
    codex_agent_elicitation_response_t **out_response);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_interaction_state_pending_for(
    codex_agent_context_t *context,
    codex_agent_interaction_state_t *state,
    codex_agent_conversation_id_t *conversation_id,
    codex_agent_pending_interaction_list_t **out_pending);