codex-agent-bindings/cpp/include/codex_agent/codex_agent.hpp

enum class HookRunStatus : std::int32_t {
    running = CODEX_AGENT_HOOK_RUN_STATUS_RUNNING,
    completed = CODEX_AGENT_HOOK_RUN_STATUS_COMPLETED,
    failed = CODEX_AGENT_HOOK_RUN_STATUS_FAILED,
    blocked = CODEX_AGENT_HOOK_RUN_STATUS_BLOCKED,
    stopped = CODEX_AGENT_HOOK_RUN_STATUS_STOPPED,
};
enum class PlanStepStatus : std::int32_t {
    pending = CODEX_AGENT_PLAN_STEP_PENDING,
    in_progress = CODEX_AGENT_PLAN_STEP_IN_PROGRESS,
    completed = CODEX_AGENT_PLAN_STEP_COMPLETED,
};
struct FormField {
    std::string name;
    std::string title;
    std::optional<std::string> description;
    FormFieldType type;
    bool is_required = false;
    bool is_secret = false;
    std::optional<FormStringFormat> format;
    std::optional<FormValue> default_value;
    std::optional<double> minimum;
    std::optional<double> maximum;
    std::optional<std::int64_t> minimum_length;
    std::optional<std::int64_t> maximum_length;
    std::vector<FormOption> options;
    bool allows_other = false;
    std::optional<std::int64_t> minimum_selections;
    std::optional<std::int64_t> maximum_selections;

    [[nodiscard]] bool accepts(
        const std::optional<FormValue>& value) const;
};
struct ElicitationResponse;
struct Elicitation {
    std::string request_id;
    ConversationId conversation_id;
    std::string server_name;
    std::string message;
    std::optional<std::string> url;
    std::optional<std::vector<FormField>> form;

    [[nodiscard]] std::map<std::string, FormValue> initial_values() const;
    [[nodiscard]] ElicitationValidation validate(
        const std::map<std::string, FormValue>& content) const;
    [[nodiscard]] ElicitationResponse accept(
        const std::map<std::string, FormValue>& content) const;
    [[nodiscard]] bool accepts(const ElicitationResponse& response) const;
};
struct ElicitationResponse {
    [[nodiscard]] static ElicitationResponse decline();

    [[nodiscard]] static ElicitationResponse cancel();

    ElicitationAction action;
    std::map<std::string, FormValue> content;
};
inline bool FormField::accepts(
    const std::optional<FormValue>& value) const {
    auto context = detail::make_sync_context();
    auto field = detail::make_form_field(context, *this);
    std::optional<detail::FormValueHandle> raw_value;
    if (value) raw_value.emplace(detail::make_form_value(context, *value));
    std::int32_t accepts = 0;
    detail::check(codex_agent_form_field_accepts(
        context->raw, field.get(), raw_value ? raw_value->get() : nullptr,
        &accepts));
    return accepts != 0;
}
inline bool Elicitation::accepts(
    const ElicitationResponse& response) const {
    auto context = detail::make_sync_context();
    auto elicitation = detail::make_elicitation(context, *this);
    auto raw_response = detail::make_elicitation_response(context, response);
    std::int32_t accepts = 0;
    detail::check(codex_agent_elicitation_accepts(
        context->raw, elicitation.get(), raw_response.get(), &accepts));
    return accepts != 0;
}