codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeValueMethods.cs


    internal static CodexStatus ElicitationInitialValues(nint context, nint elicitation, out nint content)
    {
        var status = ElicitationInitialValuesImport(context, elicitation, out content);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_validate")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ElicitationValidateImport(
        nint context, nint elicitation, nint content, out nint validation);

    internal static CodexStatus ElicitationValidate(
        nint context, nint elicitation, nint content, out nint validation)
    {
        var status = ElicitationValidateImport(context, elicitation, content, out validation);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_validation_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationValidationDestroy(nint context, ref nint validation);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_validation_issue_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationValidationIssueCount(nint context, nint validation, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_validation_issue_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationValidationIssueAt(nint context, nint validation, nuint index, ref nint issue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_validation_issue_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationValidationIssueDestroy(nint context, ref nint issue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_validation_issue_field_name_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationValidationIssueFieldNameCopy(nint context, nint issue, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_validation_issue_reason")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationValidationIssueReason(nint context, nint issue, out CodexElicitationValidationReason reason);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_accept")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ElicitationAcceptImport(
        nint context, nint elicitation, nint content, out nint response);

    internal static CodexStatus ElicitationAccept(nint context, nint elicitation, nint content, out nint response)
    {
        var status = ElicitationAcceptImport(context, elicitation, content, out response);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_accepts")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ElicitationAcceptsImport(
        nint context, nint elicitation, nint response, out int accepts);

    internal static CodexStatus ElicitationAccepts(nint context, nint elicitation, nint response, out int accepts)
    {
        var status = ElicitationAcceptsImport(context, elicitation, response, out accepts);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_response_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationResponseCreate(nint context, CodexElicitationAction action, NativeStringView* keys, nint* values, nuint count, out nint response);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_response_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationResponseDestroy(nint context, ref nint response);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_response_action")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationResponseAction(nint context, nint response, out CodexElicitationAction action);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_response_content_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationResponseContentCount(nint context, nint response, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_response_content_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ElicitationResponseContentValue(nint context, nint response, NativeStringView* key, ref nint value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_response_decline")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ElicitationResponseDeclineImport(nint context, out nint response);

    internal static CodexStatus ElicitationResponseDecline(nint context, out nint response)
    {
        var status = ElicitationResponseDeclineImport(context, out response);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_elicitation_response_cancel")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ElicitationResponseCancelImport(nint context, out nint response);

    internal static CodexStatus ElicitationResponseCancel(nint context, out nint response)
    {
        var status = ElicitationResponseCancelImport(context, out response);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_approval_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingApprovalCreate(nint context, NativeStringView* requestId, nint conversationId, NativeStringView* title, NativeStringView* details, out nint approval);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_approval_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingApprovalDestroy(nint context, ref nint approval);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_approval_request_id_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingApprovalRequestIdCopy(nint context, nint approval, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_approval_conversation_id")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingApprovalConversationId(nint context, nint approval, ref nint conversationId);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_elicitation_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingElicitationCreate(nint context, nint elicitation, out nint pending);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_elicitation_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingElicitationDestroy(nint context, ref nint pending);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_elicitation_request_id_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingElicitationRequestIdCopy(nint context, nint pending, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_elicitation_conversation_id")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingElicitationConversationId(nint context, nint pending, ref nint conversationId);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_interaction_from_approval")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingInteractionFromApproval(nint context, nint approval, out nint interaction);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_interaction_from_elicitation")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingInteractionFromElicitation(nint context, nint elicitation, out nint interaction);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_interaction_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingInteractionDestroy(nint context, ref nint interaction);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_interaction_kind")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingInteractionKind(nint context, nint interaction, out int kind);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_interaction_approval")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingInteractionApproval(nint context, nint interaction, ref nint approval);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_pending_interaction_elicitation")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus PendingInteractionElicitation(nint context, nint interaction, ref nint elicitation);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_interaction_state_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InteractionStateCreate(nint context, nint* pending, nuint pendingCount, NativeStringView* resolvingIds, nuint resolvingCount, int hasFailure, nint failure, out nint state);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_interaction_state_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InteractionStateDestroy(nint context, ref nint state);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_interaction_state_is_resolving")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus InteractionStateIsResolvingImport(
        nint context, nint state, nint interaction, out int resolving);

    internal static CodexStatus InteractionStateIsResolving(
        nint context, nint state, nint interaction, out int resolving)
    {
        var status = InteractionStateIsResolvingImport(context, state, interaction, out resolving);
        RecordExactCall();
        return status;
    }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_interaction_state_resolving_request_ids_contains")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InteractionStateResolvingRequestIdsContains(
        nint context, nint state, NativeStringView* requestId, out int contains);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_interaction_state_pending_for")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus InteractionStatePendingForImport(
        nint context, nint state, nint conversationId, out nint pending);
